{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 150,
  "lineage": "88cb9e23-f884-6ac8-7aec-452d25e7e824",
  "resources": [
    {
      "module": "module.scenario1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "blue-ec2-vuln-win",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a97929f99894c99",
            "arn": "arn:aws:ec2:us-east-1:459828947210:instance/i-04d7e8278e8f26313",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d7e8278e8f26313",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050f9ce03f1609414",
            "private_dns": "ip-10-0-2-40.ec2.internal",
            "private_ip": "10.0.2.40",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c78c685906363e91",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0129036a98a77e938",
            "tags": {
              "Name": "blue-ec2-vuln-win"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04b3ace2679b53289"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.Blue_Team_Security_Group",
            "module.vpc.aws_subnet.Private_Blue_Subnet",
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.scenario1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kali",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f9e4b812276174b",
            "arn": "arn:aws:ec2:us-east-1:459828947210:instance/i-080ce91b4a9bfc824",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080ce91b4a9bfc824",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f3b271dac7889cb",
            "private_dns": "ip-10-0-3-156.ec2.internal",
            "private_ip": "10.0.3.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a2430045bd151792",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010c5d5619170fd7b",
            "tags": {
              "Name": "kali"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01382f2b61164fde8"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.Red_Team_Security_Group",
            "module.vpc.aws_subnet.Private_Red_Subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "My_VPC_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:internet-gateway/igw-02064718cdd7855de",
            "id": "igw-02064718cdd7855de",
            "owner_id": "459828947210",
            "tags": {
              "Name": "My VPC Internet Gateway"
            },
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "My_VPC_Security_ACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:network-acl/acl-02a316de943497ec7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-02a316de943497ec7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "459828947210",
            "subnet_ids": [
              "subnet-057b8492de4826134"
            ],
            "tags": {
              "Name": "My VPC ACL"
            },
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "My_VPC_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02064718cdd7855de",
            "id": "r-rtb-0590f914ee8aedd8e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0590f914ee8aedd8e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.My_VPC_GW",
            "module.vpc.aws_route_table.My_VPC_route_table",
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "My_VPC_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0590f914ee8aedd8e",
            "owner_id": "459828947210",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02064718cdd7855de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My VPC Route Table"
            },
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_privateblue_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bef1787f81a7dc30",
            "route_table_id": "rtb-0590f914ee8aedd8e",
            "subnet_id": "subnet-0129036a98a77e938"
          },
          "dependencies": [
            "module.vpc.aws_route_table.My_VPC_route_table",
            "module.vpc.aws_subnet.Private_Blue_Subnet",
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_privatered_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bd2995c09413a11",
            "route_table_id": "rtb-0590f914ee8aedd8e",
            "subnet_id": "subnet-010c5d5619170fd7b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.My_VPC_route_table",
            "module.vpc.aws_subnet.Private_Red_Subnet",
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "My_VPC_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016bf9802182ed551",
            "route_table_id": "rtb-0590f914ee8aedd8e",
            "subnet_id": "subnet-057b8492de4826134"
          },
          "dependencies": [
            "module.vpc.aws_route_table.My_VPC_route_table",
            "module.vpc.aws_subnet.Public_Subnet",
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Blue_Team_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:security-group/sg-04b3ace2679b53289",
            "description": "Blue_Team_Security_Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b3ace2679b53289",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.252.0/22"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Blue_Team_Security_Group",
            "name_prefix": "",
            "owner_id": "459828947210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Blue_Team_Security_Group",
              "Name": "Blue_Team_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:security-group/sg-0c5c6f3b8a05d45c5",
            "description": "Public_Security_Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c5c6f3b8a05d45c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Public_Security_Group",
            "name_prefix": "",
            "owner_id": "459828947210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Public_Security_Group",
              "Name": "Public_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Red_Team_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:security-group/sg-01382f2b61164fde8",
            "description": "Red_Team_Security_Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01382f2b61164fde8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.252.0/22"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Red_Team_Security_Group",
            "name_prefix": "",
            "owner_id": "459828947210",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Red_Team_Security_Group",
              "Name": "Red_Team_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Blue_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:subnet/subnet-0129036a98a77e938",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0129036a98a77e938",
            "map_public_ip_on_launch": true,
            "owner_id": "459828947210",
            "tags": {
              "Name": "Private-Blue Subnet"
            },
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Red_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:subnet/subnet-010c5d5619170fd7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-010c5d5619170fd7b",
            "map_public_ip_on_launch": true,
            "owner_id": "459828947210",
            "tags": {
              "Name": "Private-Red Subnet"
            },
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:subnet/subnet-057b8492de4826134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-057b8492de4826134",
            "map_public_ip_on_launch": true,
            "owner_id": "459828947210",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0023dd6db0ec93d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.My_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:459828947210:vpc/vpc-0023dd6db0ec93d93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092fdbd2faa45397e",
            "default_route_table_id": "rtb-0f6a3f7b316c1fe6c",
            "default_security_group_id": "sg-0ccda21c5ee6fb420",
            "dhcp_options_id": "dopt-fef59684",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0023dd6db0ec93d93",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f6a3f7b316c1fe6c",
            "owner_id": "459828947210",
            "tags": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}